# final-project-brenda

./: .gitignore  .pre-commit-config.yaml  CITATION  README.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
src/final_project_btb/: config.py
src/final_project_btb/analysis/: data_extraction.py  prediction_pdf.py  task_predictor_pdf.py
src/final_project_btb/data_management/: cleaning_data.py  task_cleaning_data_extracted.py
src/final_project_btb/final/: task_plot.py
tests/analysis/: test_data_extraction.py  test_predictor_pdf.py
tests/data_management/: test_cleaning_data.py
